# production-ml-portfolio

./: OmniXAI_Library.ipynb  README.md
fraud-detection/: Dockerfile  README.md  pyproject.toml  setup_and_train.py  test1.py
fraud-detection/app/: main.py  model.py  monitoring.py  schema.py
fraud-detection/data/: reference_sample.pkl  train.csv
fraud-detection/models/: category_mappings.pkl  lgb_model.txt  xgb_model.json
recommendation-system/: pyproject.toml  setup_and_train.py  svd_trainer.py
recommendation-system/app/: main.py
recommendation-system/data/: movies.csv
